...

  "txt_comment_hint": "Enter a comment",
  "txt_error_empty_comment": "Comment should not be empty!",
  "txt_no_comments": "There are no comments yet.",
  "txt_signal_photo_description": "Signal Photo",
  "txt_progress_indicator_description": "Progress indicator",
  "txt_somebody_on_the_way": "Somebody on the way",
  "txt_solved": "Solved",
  "txt_help_needed": "Help needed",
  "txt_status": "Status",
  "txt_refresh": "Refresh",
  "txt_filter_signals": "Filter signals",
  "txt_status_updated": "Status successfully updated!",
...
  "txt_password_reset_successful": "We sent you an email with a link from which you can reset your password",
  "txt_yes": "Yes",
  "txt_no": "No",
  "shared_preferences_for_app": "defaultSharedPreferences",
  "txt_logged_user_not_found": "Logged in user not found!",
  "signal_types_items": [
    "Emergency",
    "Lost or Found",
    "Blood donation",
    "Homeless",
    "Unneutered animals",
    "Wild animals",
    "Other"
...
